Add start button controller Implement the ability to display the game board and hide the menu upon clicking on the start button.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -45,7 +45,7 @@ button:hover {
   cursor: pointer;
 }
 
-#display--menu {
+#container--menu {
   display: flex;
   flex-direction: column;
   align-items: center;
